# tensorboardpy

./: README.md  example.ipynb  gen_log.py  pyproject.toml
runs/0/: events.out.tfevents.1629596494.yamada.local.43744.0
runs/1/: events.out.tfevents.1629596494.yamada.local.43744.1
runs/2/: events.out.tfevents.1629596494.yamada.local.43744.2
runs/3/: events.out.tfevents.1629596494.yamada.local.43744.3
runs/4/: events.out.tfevents.1629596494.yamada.local.43744.4
tensorboardpy/: __init__.py  core.py  statics.py
