[tool.poetry]
name = "tensorboardpy"
version = "0.1.0"
description = "Create a pandas dataframe from the tensorboard log!"
authors = ["MasanoriYamada <yamada0224@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
tensorboard = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
torch = "^1.9.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
